k8s/bases/infrastructure/controllers/goldilocks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: goldilocks
  labels:
    goldilocks.fairwinds.com/vpa-update-mode: "auto"
    goldilocks.fairwinds.com/vpa-min-replicas: "2"
