k8s/bases/infrastructure/controllers/goldilocks/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
  namespace: goldilocks
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Goldilocks
    gethomepage.dev/description: Dashboard for automated vertical pod autoscaling recommendations.
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: mdi-white-balance-sunny-#FFA500
    gethomepage.dev/app: goldilocks-dashboard
    gethomepage.dev/pod-selector: app.kubernetes.io/name=goldilocks
spec:
  parentRefs:
    - name: platform
      namespace: kube-system
      sectionName: https
  hostnames:
    - goldilocks.${domain}
  rules:
    - filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Auth-Request-Redirect
                value: https://goldilocks.${domain}/
      backendRefs:
        - name: oauth2-proxy
          namespace: oauth2-proxy
          port: 80
